# flymd

./: README.en.md  README.md  ROADMAP.en.md  ROADMAP.md  index.json  package-lock.json  package.json
public/plugins/ai-assistant/: main.js
public/plugins/floating-toolbar/: main.js
public/plugins/s3-gallery/: main.js
scripts/: patch-android-softinput.cjs
src/: dialog.ts  i18n.ts  main.ts  mobile.css  mobile.ts  mobileFloatingToolbarBuiltIn.ts  mobileSelectionToolbar.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/core/: imageUpload.ts  print.ts
src/extensions/: extensionsPanel.ts  pluginMenu.ts  pluginRuntimeHost.ts  webdavSync.ts
src/modes/: sourceLineNumbers.ts  stickyNoteHost.ts
src/plugins/: markdownItKatex.ts
src/ui/: contextMenus.ts  libraryContextMenu.ts
src/uploader/: manualImageUpload.ts  storeConfig.ts  uploaderDialog.ts
src/wysiwyg/v2/: index.ts
